--- a/.github/workflows/ejercicio01.yml
+++ b/.github/workflows/ejercicio01.yml
@@ -11,6 +11,7 @@ jobs:
     
       - name: Step 1 - Crear directorio examen
         run: mkdir examen
+             mkdir artefacto
         
       - name: Step 2 - Adicionar archivos al directorio examen
         run: |
@@ -21,7 +22,8 @@ jobs:
           echo 'Mensaje examen 4'    > examen04.html
           echo 'Mensaje examen 5'    > examen05.html          
           cd ..
-          
+      
+      - name: Step - Creacion del artefacto ZIP
       - uses: papeloto/action-zip@v1
         with:
           files: examen/
@@ -29,3 +31,23 @@ jobs:
                                     
       - name: Step 4 - Verificacion de la creacion de artefactos ZIP
         run: ls -la
+        
+      - name: Step 5 - Upload Artefacto
+        uses: actions/upload-artifact@v3
+        with:
+          name: Artefacto_EXAMEN
+          path: examen.zip
+          
+      - name: Step 6 - Download Artefacto
+        uses: actions/download-artifact@v3
+        with:
+          name: Artefacto_EXAMEN
+          path: ~/artefacto
+          
+      - name: step 7 - Verificacion de la descarga de artefacto 
+        run: ls -la ~/artefacto
+      
+        
+      
+        
+        
