--- a/.github/workflows/ejercicio01.yml
+++ b/.github/workflows/ejercicio01.yml
@@ -24,7 +24,7 @@ jobs:
           echo 'Mensaje examen 5'    > examen05.html          
           cd ..
       
-      - name: Step - Creacion del artefacto ZIP
+      - name: Step 3 - Creacion del artefacto ZIP
       - uses: papeloto/action-zip@v1
         with:
           files: examen/
@@ -39,13 +39,13 @@ jobs:
           name: Artefacto_EXAMEN
           path: examen.zip
           
-      - name: Step 6 - Download Artifacto
+      - name: Step 6 - Download Artefacto
         uses: actions/download-artifact@v3
         with:
           name: Artefacto_EXAMEN
           path: ~/artefacto
           
-      - name: step 7 - Verificacion de la descarga de arefactos
+      - name: step 7 - Verificacion de la descarga del artefacto
         run: ls -la ~/artefacto
       
         
